--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,10 +9,10 @@
       <li class="nav-item active">
         <a class="nav-link" [routerLink]="['']">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" [routerLink]="['/about']">About</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link " [routerLink]="['/contact']">Contact</a>
       </li>
       
